--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -3,7 +3,7 @@
     = link_to restaurant.name, restaurant_path(restaurant)
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
-    %a(href='restaurants/:restaurant_id/reviews/new') add a review
+    = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
 
     %h3
       Reviews for
