--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -23,3 +23,4 @@
   No restaurants yet
 
 = link_to('Add a restaurant', new_restaurant_path)
+= link_to("Sign in with Facebook", user_facebook_omniauth_authorize_path)
